# monte_carlo_fun

./: README.md
notebooks/: analysis.ipynb
src/: pyproject.toml
src/utils/: d_ball_volume.py  grid_plot.py  numerical_integration.py
