[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["lavaman131 <lavaalex3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
numpy = "^1.26.4"
networkx = "^3.2.1"
scipy = "^1.12.0"
tqdm = "^4.66.2"
jupyter = "^1.0.0"
matplotlib-inline = "^0.1.6"
jupyterlab-myst = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
